# Proyecto-3---GalleryTEC

./: .gitignore  CMakeLists.txt  dconfig  editmetadatadialog.cpp  editmetadatadialog.h  editmetadatadialog.ui  galerydialog.cpp  galerydialog.h  galerydialog.ui  galleriesdialog.cpp  galleriesdialog.h  galleriesdialog.ui  imageOperations.cpp  imageOperations.h  imagesdialog.cpp  imagesdialog.h  imagesdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metadatadialog.cpp  metadatadialog.h  metadatadialog.ui  mongodbHandler.cpp  mongodbHandler.h  registerdialog.cpp  registerdialog.h  registerdialog.ui  resource.qrc  resources.qrc  visualizerdialog.cpp  visualizerdialog.h  visualizerdialog.ui  window.cpp  window.h  window.ui
html/: annotated.html  classEditMetadataDialog-members.html  classEditMetadataDialog.html  classGalleriesDialog-members.html  classGalleriesDialog.html  classImageOperations-members.html  classImageOperations.html  classImagesDialog-members.html  classImagesDialog.html  classMainWindow-members.html  classMainWindow.html  classMetadataDialog-members.html  classMetadataDialog.html  classMongodbHandler-members.html  classMongodbHandler.html  classRegisterDialog-members.html  classRegisterDialog.html  classVisualizerDialog-members.html  classVisualizerDialog.html  classes.html  editmetadatadialog_8h.html  editmetadatadialog_8h_source.html  files.html  functions.html  functions_func.html  galleriesdialog_8h.html  galleriesdialog_8h_source.html  hierarchy.html  imageOperations_8h.html  imageOperations_8h_source.html  imagesdialog_8h.html  imagesdialog_8h_source.html  index.html  mainwindow_8h.html  mainwindow_8h_source.html  menudata.js  metadatadialog_8h.html  metadatadialog_8h_source.html  mongodbHandler_8h.html  mongodbHandler_8h_source.html  (+4 more)
latex/: annotated.tex  classEditMetadataDialog.eps  classEditMetadataDialog.tex  classGalleriesDialog.eps  classGalleriesDialog.tex  classImageOperations.tex  classImagesDialog.eps  classImagesDialog.tex  (+29 more)
(+29 files in other folders)
